--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .gradle
 /local.properties
 /.idea/workspace.xml
@@ -6,8 +5,7 @@
 .DS_Store
 /build
 /captures
-=======
-# Built application files
+# bUIlt application files
 *.apk
 *.ap_
 
@@ -39,4 +37,6 @@ proguard/
 
 # Android Studio captures folder
 captures/
->>>>>>> 6c2383000a9042c403792d895f4afa393c1ba586
+
+#idea
+.idea
