--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
+
     defaultConfig {
         applicationId "com.mcsh.smartshuffle"
         minSdkVersion 15
