--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -21,7 +22,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //Butter knife
+
+    //Orma
+//    apt 'com.github.gfx.android.orma:orma-processor:2.4.7'
+//    compile 'com.github.gfx.android.orma:orma:2.4.7'
+
+    //Prefs
+    //    compile 'com.github.GrenderG:Prefs:1.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
+    compile 'com.jakewharton:butterknife:8.0.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
