--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ dependencies {
     //Butter knife
 
     //Orma
-//    apt 'com.github.gfx.android.orma:orma-processor:2.4.7'
-//    compile 'com.github.gfx.android.orma:orma:2.4.7'
+    apt 'com.github.gfx.android.orma:orma-processor:2.4.7'
+    compile 'com.github.gfx.android.orma:orma:2.4.7'
 
     //Prefs
     //    compile 'com.github.GrenderG:Prefs:1.1'
