--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <service android:name=".deprecate.MusicService" />
+        <service android:name=".Service.MusicService" />
 
         <activity
             android:name=".activity.Start"
